--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "mongodb": "^3.6.4",
     "next": "10.0.7",
+    "primeicons": "^4.1.0",
+    "primereact": "^6.0.2",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-youtube": "^7.13.1"
   }
 }
