--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "primereact": "^6.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-youtube": "^7.13.1"
+    "react-youtube": "^7.13.1",
+    "swr": "^0.4.2"
   }
 }
