--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "immer": "^8.0.1",
     "mongodb": "^3.6.4",
     "next": "10.0.7",
     "primeicons": "^4.1.0",
     "primereact": "^6.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-redux": "^7.2.2",
     "react-youtube": "^7.13.1",
+    "redux": "^4.0.5",
     "swr": "^0.4.2"
   }
 }
