--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "immer": "^8.0.1",
     "mongodb": "^3.6.4",
     "next": "10.0.7",
+    "next-auth": "^3.13.3",
     "primeicons": "^4.1.0",
     "primereact": "^6.0.2",
     "react": "17.0.1",
@@ -18,6 +19,7 @@
     "react-redux": "^7.2.2",
     "react-youtube": "^7.13.1",
     "redux": "^4.0.5",
-    "swr": "^0.4.2"
+    "swr": "^0.4.2",
+    "sqlite3": "^5.0.2"
   }
 }
