--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "immer": "^8.0.1",
     "mongodb": "^3.6.4",
     "next": "10.0.7",
@@ -19,7 +20,7 @@
     "react-redux": "^7.2.2",
     "react-youtube": "^7.13.1",
     "redux": "^4.0.5",
-    "swr": "^0.4.2",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "swr": "^0.4.2"
   }
 }
